--- a/residual_momentum_calculator.ipynb
+++ b/residual_momentum_calculator.ipynb
@@ -44,9 +44,11 @@
    "outputs": [],
    "source": [
     "# Risk-free market daily returns proxy (US treasury bill ETF)\n",
-    "risk_free_returns = get_pricing('BIL', fields='price', start_date=start_date, end_date=end_date).pct_change()[1:]\n",
+    "risk_free_returns = get_pricing('BIL', fields='price', start_date=start_date,\n",
+    "                                end_date=end_date).pct_change()[1:]\n",
     "# Overall market daily returns proxy (S&P 500 ETF)\n",
-    "market_returns = get_pricing('SPY', fields='price', start_date=start_date, end_date=end_date).pct_change()[1:]"
+    "market_returns = get_pricing('SPY', fields='price', start_date=start_date,\n",
+    "                             end_date=end_date).pct_change()[1:]"
    ]
   },
   {
@@ -146,7 +148,7 @@
     "BMS = returns_bigmcap - returns_smallmcap  \n",
     "HML = returns_highbpratio - returns_lowbpratio \n",
     "    \n",
-    "# Spreading the above factor returns data over all eequities for each day, to ...\n",
+    "# Spreading the above factor returns data over all eequities for each day, to\n",
     "# calculate correlations between individual equities and factor returns\n",
     "data = results[['returns']].set_index(results.index)\n",
     "asset_list_sizes = [group[1].size for group in data.groupby(level=0)]\n",
@@ -172,7 +174,7 @@
    "source": [
     "# 36-month regression\n",
     "\n",
-    "# Clean data of NaN's at head and tail of EXMKT column...\n",
+    "# Clean data of NaN's at head and tail of EXMKT column\n",
     "# since returns are calculated by the difference in consecutive daily market open prices\n",
     "data = data.dropna()\n",
     "\n",
@@ -239,10 +241,12 @@
     "end_date = '2019-02-01'\n",
     "\n",
     "# Risk-free market returns proxy (US treasury bill ETF)\n",
-    "risk_free_returns = get_pricing('BIL', fields='price', start_date=start_date, end_date=end_date).pct_change()[1:]\n",
+    "risk_free_returns = get_pricing('BIL', fields='price', start_date=start_date,\n",
+    "                                end_date=end_date).pct_change()[1:]\n",
     "\n",
     "# Overall market returns proxy (S&P 500 ETF)\n",
-    "market_returns = get_pricing('SPY', start_date=start_date, end_date=end_date, fields='price').pct_change()[1:]\n",
+    "market_returns = get_pricing('SPY', start_date=start_date, end_date=end_date,\n",
+    "                             fields='price').pct_change()[1:]\n",
     "\n",
     "def make_pipeline():\n",
     "    pipe = Pipeline()\n",
@@ -340,12 +344,13 @@
     "residual_returns_data = data.multiply(betas, axis=0, level=1)\n",
     "\n",
     "# Finding expected returns by summing residual returns columns\n",
-    "residual_returns_data['expected_returns'] = residual_returns_data['BMS'] +\\\n",
-    "residual_returns_data['EXMKT'] +\\\n",
-    "residual_returns_data['HML']\n",
+    "residual_returns_data['expected_returns'] = (residual_returns_data['BMS']\n",
+    "                                            + residual_returns_data['EXMKT']\n",
+    "                                            + residual_returns_data['HML']\n",
+    "                                            )\n",
     "\n",
-    "residual_returns_data['residual_returns'] = residual_returns_data['returns']\\\n",
-    "- residual_returns_data['expected_returns']"
+    "residual_returns_data['residual_returns'] = (residual_returns_data['returns']\\\n",
+    "                                            - residual_returns_data['expected_returns'])"
    ]
   },
   {
