--- a/residual_momentum_calculator.ipynb
+++ b/residual_momentum_calculator.ipynb
@@ -97,7 +97,7 @@
     "    market_cap = Latest([Fundamentals.market_cap])\n",
     "    book_to_price = ( 1 / Latest([Fundamentals.pb_ratio]) )\n",
     "\n",
-    "    # Rank and group equities based on market cap and book:price data for use in...\n",
+    "    # Rank and group equities based on market cap and book:price data for use in\n",
     "    # factor mimicking portfolios\n",
     "    bigmcap = market_cap.rank(mask=universe).top(1000)\n",
     "    smallmcap = market_cap.rank(mask=universe).bottom(1000)\n",
